# onboarding_manager_agent

./: .env.example  .gitignore  Makefile  README.md  config.py  enhanced_logger.py  main.py  package.json  pyproject.toml  requirements.txt  run_with_stubs.py  setup_mcp.sh  stub_services.py  test_mcp.py  trace_workflow.py
.claude/: settings.local.json
src/: main.py
src/agents/: orchestrator.py  orchestrator_enhanced.py
src/agents/specialized/: database.py  email_communication.py  landscape_update.py  member_contact.py  project_committee.py  slack_onboarding.py
src/config/: settings.py
src/models/: contact.py  events.py  project.py
src/tools/: mcp_client.py  mcp_database.py  mcp_database_abstraction.py
src/tools/api_clients/: base.py  email.py  member_service.py  project_service.py  slack.py
src/utils/: exceptions.py  logging.py  metrics.py  progress_logger.py
