[tool.poetry]
name = "onboarding-manager-agent"
version = "1.0.0"
description = "Autonomous agent system for onboarding contacts to Linux Foundation projects"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
python = "^3.9"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
agno = "^1.0.0"
aiohttp = "^3.9.0"
aiosmtplib = "^3.0.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
structlog = "^23.0.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
onboarding-agent = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "YTT", "B", "A", "C4", "T10", "ISC", "ICN", "PT", "RET", "SIM", "ERA"]
ignore = ["E501", "B008"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"